exports[`test Hand renders as before not on turn 1`] = `
<div
  className="pile">
  <div
    className="card" />
</div>
`;

exports[`test Hand renders as before on turn 1`] = `
<div
  className="pile">
  <div
    className="card">
    <Unknown />
  </div>
</div>
`;

exports[`test Hand renders as before with no cards 1`] = `
<div
  className="pile">
  <div
    className="noCards">
    <p
      className="no-cards-message">
      No more cards
    </p>
  </div>
</div>
`;
